--- a/second.html
+++ b/second.html
@@ -1,5 +1,8 @@
 <h1> Introduction <h1>
   <p><b>vintage is my life</b></p>
-Hello world...
+I LOVE YOU 3000
 
-ini di buat menggunakan local repository
+baby.. take my hand
+i want you to be my husband
+couse you're my iron man
+and i love you 3000
